5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1801_2579.log
== TEST (2019-06-08 15:48:21) 
-- CODE:
input("calcule?: ")
for x in range(1,51):
	print(x)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:48:26) 
-- CODE:
input("calcule?: ")
for x in range(1,51):
	print(x)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:49:31) 
-- CODE:
input("calcule?: ")
h = 0
for x in range(1,51):
	h = h + (x+2)/x
print(h)
-- OUTPUT:
58.998410676658864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:51:18) 
-- CODE:
input("calcule?: ")
h = 1
for x in range(1,50):
	h = 1 + (x+2)/(x+1)
print(round(h, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:51:23) 
-- CODE:
input("calcule?: ")
h = 1
for x in range(1,50):
	h = 1 + (x+2)/(x+1)
print(round(h, 2))
-- OUTPUT:
2.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:52:17) 
-- CODE:
input("calcule?: ")
h = 1
x = 1
while x <= 50:
	h = 1 + (x+2)/(x+1)
	x = x + 1
print(round(h, 2))
-- OUTPUT:
2.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:52:30) 
-- CODE:
input("calcule?: ")
h = 1
x = 1
while x <= 50:
	h = h + (x+2)/(x+1)
	x = x + 1
print(round(h, 2))
-- OUTPUT:
54.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:52:57) 
-- CODE:
input("calcule?: ")
h = 1
x = 1
while x <= 50:
	h = (x+2)/(x+1)
	x = x + 1
	print(h)
print(round(h, 2))
-- OUTPUT:
1.5
1.3333333333333333
1.25
1.2
1.1666666666666667
1.1428571428571428
1.125
1.1111111111111112
1.1
1.0909090909090908
1.0833333333333333
1.0769230769230769
1.0714285714285714
1.0666666666666667
1.0625
1.0588235294117647
1.0555555555555556
1.0526315789473684
1.05
1.0476190476190477
1.0454545454545454
1.0434782608695652
1.0416666666666667
1.04
1.0384615384615385
1.037037037037037
1.0357142857142858
1.0344827586206897
1.0333333333333334
1.032258064516129
1.03125
1.0303030303030303
1.0294117647058822
1.0285714285714285
1.0277777777777777
1.027027027027027
1.0263157894736843
1.0256410256410255
1.025
1.024390243902439
1.0238095238095237
1.0232558139534884
1.0227272727272727
1.0222222222222221
1.0217391304347827
1.0212765957446808
1.0208333333333333
1.0204081632653061
1.02
1.0196078431372548
1.02
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:53:32) 
-- CODE:
input("calcule?: ")
h = 1
x = 1
while x <= 50:
	h = (x+2)
	y = (x+1)
	x = x + 1
	print(h)
	print(y)
print(round(h, 2))
-- OUTPUT:
3
2
4
3
5
4
6
5
7
6
8
7
9
8
10
9
11
10
12
11
13
12
14
13
15
14
16
15
17
16
18
17
19
18
20
19
21
20
22
21
23
22
24
23
25
24
26
25
27
26
28
27
29
28
30
29
31
30
32
31
33
32
34
33
35
34
36
35
37
36
38
37
39
38
40
39
41
40
42
41
43
42
44
43
45
44
46
45
47
46
48
47
49
48
50
49
51
50
52
51
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:53:55) 
-- CODE:
input("calcule?: ")
h = 1
x = 1
while x <= 50:
	h = (x+2)
	y = (x+1)
	x = x + 1
	print(h)
	#print(y)
print(round(h, 2))
-- OUTPUT:
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:54:44) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
while x <= 50:
	h = (x)
	y = (x+1)
	x = x + 2
	print(h)
	#print(y)
print(round(h, 2))
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
49
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:55:18) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
while x <= 99:
	h = (x)
	y = (x+1)
	x = x + 2
	print(h)
	#print(y)
print(round(h, 2))
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
99
99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:55:27) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
while x < 99:
	h = (x)
	y = (x+1)
	x = x + 2
	print(h)
	#print(y)
print(round(h, 2))
-- OUTPUT:
3
5
7
9
11
13
15
17
19
21
23
25
27
29
31
33
35
37
39
41
43
45
47
49
51
53
55
57
59
61
63
65
67
69
71
73
75
77
79
81
83
85
87
89
91
93
95
97
97
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:56:20) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
while y <= 50:
	h = 
	y = y + 1
	x = x + 2
	#print(h)
	print(y)
print(round(h, 2))
-- ERROR:
File "XXXX", line 5
    h = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:56:29) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
y = 1
while y <= 50:
	h = 
	y = y + 1
	x = x + 2
	#print(h)
	print(y)
print(round(h, 2))
-- ERROR:
File "XXXX", line 6
    h = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:56:36) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
y = 1
while y <= 50:
	h = x
	y = y + 1
	x = x + 2
	#print(h)
	print(y)
print(round(h, 2))
-- OUTPUT:
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
101
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 15:57:58) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
y = 2
while y <= 50:
	h = h + x/y
	y = y + 1
	x = x + 2
print(round(h, 2))
-- OUTPUT:
95.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 15:58:03) 
-- CODE:
input("calcule?: ")
h = 1
x = 3
y = 2
while y <= 50:
	h = h + x/y
	y = y + 1
	x = x + 2
print(round(h, 2))
-- EXECUTION TIME:
0.879265
-- TEST CASE 1:
---- input:
Calcule
---- correct output:
95.50
---- user output:
95.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
